--- a/test.ipynb
+++ b/test.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INT\n"
+      "Tokens1\n"
      ]
     }
    ],
    "source": [
     "\n",
     "class Token:\n",
+    "    v=name=\"Tokens1\"\n",
     "    def __init__(self,type,value):\n",
     "        self.value=value\n",
     "        self.type=type\n",
@@ -24,7 +25,7 @@
     "\n",
     "tok=Token(\"INT\",6)\n",
     "\n",
-    "print(tok.type)"
+    "print(tok.name)"
    ]
   }
  ],
