--- a/test.ipynb
+++ b/test.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "True\n",
       "Tokens1\n"
      ]
     }
@@ -20,11 +21,17 @@
     "    def __init__(self,type,value):\n",
     "        self.value=value\n",
     "        self.type=type\n",
+    "    def matches(self,keyword,value):\n",
+    "        if keyword==self.type and value==self.value:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
     "\n",
     "\n",
     "\n",
     "tok=Token(\"INT\",6)\n",
     "\n",
+    "print(tok.matches(\"INT\",6))\n",
     "print(tok.name)"
    ]
   }
