--- a/test.ipynb
+++ b/test.ipynb
@@ -34,6 +34,29 @@
     "print(tok.matches(\"INT\",6))\n",
     "print(tok.name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amit Vatia\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=\"\"\n",
+    "\n",
+    "res=res+\"amit\"\n",
+    "res=res+\" \"\n",
+    "res=res+\"Vatia\"\n",
+    "\n",
+    "print(res)"
+   ]
   }
  ],
  "metadata": {
@@ -52,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
