--- a/test.ipynb
+++ b/test.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "Tokens1\n"
+      "True\n"
      ]
     }
    ],
@@ -27,12 +26,18 @@
     "        else:\n",
     "            return False\n",
     "\n",
+    "    def selfCheck(self):\n",
+    "        new=Token(\"INT\",5)\n",
+    "        res=new.matches(\"INT\",5)\n",
+    "        return res\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "tok=Token(\"INT\",6)\n",
     "\n",
-    "print(tok.matches(\"INT\",6))\n",
-    "print(tok.name)"
+    "\n",
+    "print(tok.selfCheck())"
    ]
   },
   {
@@ -44,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "amit Vatia\n"
+      "amit Vatiaa\n"
      ]
     }
    ],
@@ -55,7 +60,9 @@
     "res=res+\" \"\n",
     "res=res+\"Vatia\"\n",
     "\n",
-    "print(res)"
+    "res+=\"a\" if 3>2 else \"b\"\n",
+    "\n",
+    "print(res)\n"
    ]
   }
  ],
